<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="playing_now">Playing now</string>
    <string name="song_name">Song name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">04:00</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ap_icon">Icon</string>
    <string name="text_nav">Welcome to \nWorld of music</string>
    <string name="liked_song">Liked songs</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="language">Languages</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>

</resources>